--- a/templates/details_blog.html
+++ b/templates/details_blog.html
@@ -70,7 +70,7 @@
                                     <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.titre }}</a></h5>
                                 </div>
                                 <div class="lpa-meta" style="color: white;">
-                                    <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:20] }}</a>
+                                    <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:20] }}...</a>
                                     <br>
                                     <a class="date text-muted" href="#" style="float: right;font-size: 10px;">{{ blg.date.strftime('%B %d, %Y') }}</a>
                                 </div>
@@ -128,7 +128,7 @@
                                         <h5><a href="#" style="color: rgb(60, 67, 185);font-size: 20px;">{{ blg.titre }}</a></h5>
                                     </div>
                                     <div class="lpa-meta" style="color: white;">
-                                        <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:20] }}</a>
+                                        <a class="name" href="#" style="font-weight: bold;">{{ blg.description[:20] }}...</a>
                                         <br>
                                         <a class="date text-muted" href="#" style="float: right;font-size: 10px;">{{ blg.date.strftime('%B %d, %Y') }}</a>
                                     </div>
