--- a/templates/footer.html
+++ b/templates/footer.html
@@ -26,7 +26,7 @@
     </div>
     <div class="col-md-4 mb-4 mb-md-0 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
     <h3 style="color: white;">Newsletter</h3>
-    <p class="mb-4">Abonnez-vous pour ne rater aucun de nos actualités.</p>
+    <p class="mb-4">Abonnez-vous pour ne rater aucune de nos actualités.</p>
     <form action="/newsletter" method="post" class="">
     <input style="border-radius: 50px;" type="text" class="form-control" name="name" placeholder="Entrez votre nom et prenom" required>
     <br>
