--- a/templates/partenaire.html
+++ b/templates/partenaire.html
@@ -38,6 +38,9 @@
                </button>
            </div>
        </div>
+       
+       <hr style="border: 3px solid black;"> 
+       <br>
        <div class="grid sm:grid-cols-2 sm:mt-[50px]">
 
            <div class="bg-white sm:ml-[30px]">
@@ -51,7 +54,7 @@
                    <img src="../static/assets/Arrow.png" alt="" class="sm:w-[36px] w-[25px] my-auto">
                </button>
            </div>
-           <div class="bg-white sm:mt-0 mt-[10px] w-[260px] h-[230px] ml-[20px] sm:w-[400px] sm:h-[480px] sm:ml-[70px] shadow-xl hover:scale-105 transition-transform   ">
+           <div class="bg-white sm:mt-0 mt-[10px] w-[260px] h-[230px] ml-[20px] sm:w-[400px] sm:h-[480px] sm:ml-[70px] hover:scale-105 transition-transform   ">
                <img src="../static/assets/pulse.png" alt="" class="sm:mt-[160px] mt-[70px] sm:ml-[0px]">
            </div>
        </div>
