--- a/templates/formation.html
+++ b/templates/formation.html
@@ -31,7 +31,7 @@
         {% if formations %}
             {% for formation in formations %}
                 <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-                    <div class="card service-wrapper border-5 shadow p-6" style="height: 300px; border-radius: 50px;">
+                    <div class="card service-wrapper border-5 shadow p-6" style="height: 300px; border-radius: 50px;min-height:300px;">
                         <div class="icon text-center text-custom h1 shadow rounded bg-white">
                             <span class="uim-svg" style=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><rect width="20" height="15" x="2" y="3" class="uim-tertiary" rx="3"></rect><path class="uim-primary" d="M16,21H8a.99992.99992,0,0,1-.832-1.55469l4-6a1.03785,1.03785,0,0,1,1.66406,0l4,6A.99992.99992,0,0,1,16,21Z"></path></svg></span>
                         </div>
