--- a/Main/templates/formations.html
+++ b/Main/templates/formations.html
@@ -14,11 +14,18 @@
   {% with currentPage='academy' %}
   {% include 'navbar.html' %}
 {% endwith %}
+<div class="ml-5 mt-5">
+  <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+      <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+        Formations
+      </p>
+      <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+    </div>
+</div>
   <div class="container" style="height: fit-content; margin-bottom: 100px;">
       <div class="row justify-content-center">
           <div class="col-12">
               <div class="section-title text-center mb-4 pb-2">
-                  <h4 class="title mb-4 mt-4" style="font-family: 'Raleway'; font-weight: bold; font-size: 40px;">Nos formations</h4>
                   <p class="text-muted para-desc mx-auto mb-0">Ici vous trouvez nos formations.</p>
               </div>
           </div><!--end col-->
