--- a/Main/templates/carriere.html
+++ b/Main/templates/carriere.html
@@ -15,8 +15,15 @@
 {% include 'navbar.html' %}
 {% endwith %}
 
-<body>
-
+<body style="background-color: white;">
+  <div class="ml-5 mt-5">
+    <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+        <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+          Opportunites
+        </p>
+        <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+      </div>
+  </div>
     
     <section class="w-full background-section flex justify-center items-center relative animate-element" data-animation="fadeInUp" style="animation-duration: 0.3s;" >
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
