--- a/Main/templates/details_blog.html
+++ b/Main/templates/details_blog.html
@@ -22,7 +22,7 @@
     <h1 class="display-4 font-weight-bold mb-3" style="color: rgb(0, 3, 168);">{{ blog.titre }}</h1>
     <hr style="border: 1px solid black;">
     <img src="../{{blog.imagePath}}" alt="Image de l'article" class="img-fluid rounded" style="height: 50vh; width: 100%">
-    <p class="mt-4" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;text-align:justify;">
+    <p  style="background-color: white;min-height: 300px;max-height: fit-content;padding: 10px;border-radius: 4px;"class="mt-4" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;text-align:justify;">
       {{ blog.description |safe}}
     </p>
 </div>
@@ -38,17 +38,17 @@
 
 
 
-    <div class="share-buttons">
+    <div class="share-buttons" style="display: inline;"> 
         <!-- Facebook -->
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{ url_for('details_blog', id=blog.id, _external=True) }}" target="_blank" style="display: inline-block; margin-right: 10px; background-color: #3b5998; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ url_for('details_blog', id=blog.id, _external=True) }}" target="_blank" style="display: inline; margin-right: 10px; background-color: #3b5998; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
             <i class="fab fa-facebook-f"></i>
         </a>
         <!-- Twitter -->
-        <a href="https://twitter.com/intent/tweet?url={{ url_for('details_blog', id=blog.id, _external=True) }}" target="_blank" style="display: inline-block; margin-right: 10px; background-color: #1da1f2; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
+        <a href="https://twitter.com/intent/tweet?url={{ url_for('details_blog', id=blog.id, _external=True) }}" target="_blank" style="display: inline; margin-right: 10px; background-color: #1da1f2; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
             <i class="fab fa-twitter"></i>
         </a>
         <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/shareArticle?url={{ url_for('details_blog', id=blog.id, _external=True) }}" target="_blank" style="display: inline-block; background-color: #0077b5; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
+        <a href="https://www.linkedin.com/shareArticle?url={{ url_for('details_blog', id=blog.id, _external=True) }}" target="_blank" style="display: inline; background-color: #0077b5; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
             <i class="fab fa-linkedin-in"></i>
         </a>
     </div>
