--- a/Main/templates/emplois.html
+++ b/Main/templates/emplois.html
@@ -15,14 +15,14 @@
     {% with currentPage='carriere' %}
     {% include 'navbar.html' %}
   {% endwith %}
- 
+  <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+    <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+      Offres {{type}}
+    </p>
+    <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+  </div>
   <div class="container mt-5 mb-3">
-    <div class="w-2/4 mb-3">
-      <div class="text-center mt-8">
-        <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: blue;">Offres {{type}}</h2>
-        <div class="w-16 h-1 bg-blue-900 mx-auto" style="background-color: blue;"></div>
-      </div>
-    </div>
+
 
     <div class="row">
       <div class="col">
