--- a/Main/templates/evenement.html
+++ b/Main/templates/evenement.html
@@ -17,14 +17,14 @@
   {% with currentPage='academy' %}
   {% include 'navbar.html' %}
 {% endwith %}
-
+<div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+  <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+    Evenements
+  </p>
+  <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+</div>
     <div class="container">
-      <div class="w-2/4">
-        <div class="text-center mt-8">
-            <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: blue;">Evenements</h2>
-            <div class="w-16 h-1 bg-blue-900 mx-auto" style="background-color: blue;"></div>
-        </div>
-    </div>
+
       </div>
       <div class="mt-4" >
         <div class="img bg-opacity-20 p-1 " style="height: fit-content;font-family: 'Raleway';padding: 10px;" >
