--- a/Main/templates/formationview.html
+++ b/Main/templates/formationview.html
@@ -15,7 +15,14 @@
         {% include 'navbar.html' %}
         {% endwith %}
 
-
+        <div class="ml-5 mt-5">
+            <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+                <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+                  {{form.titre |safe}}
+                </p>
+                <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+              </div>
+          </div>
     <div class="container-fluid" style="background-color: white;">
         <div class="single_product">
             <div class="container-fluid" style=" background-color: #fff; padding: 11px;">
