--- a/Main/templates/homepage.html
+++ b/Main/templates/homepage.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <section class="w-full  flex justify-center items-center relative animate-element" data-animation="fadeInUp" style="animation-duration: 1.2s;padding-bottom: 0px;">
+  <section class="w-full  flex justify-center items-center relative animate-element" data-animation="fadeInUp" style="animation-duration: 1.2s;padding-bottom: 0px;background-color: rgb(245, 245, 255);">
 
     <div class="container mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 1s;">
         <div class="row">
@@ -246,13 +246,13 @@
             <div class="text-center">
                 <div id="app" style="font-size: 60px;color: rgb(75, 75, 255);">
                             <div class="growth-icon">
-                                <i class="fas fa-chart-line"></i>
+                              <i class="fas fa-handshake"></i>
                             </div>
                 </div>
                  <p class="sm:text-[50px] text-[55px] font-bold text-primary-first sm:mt-[15px] text-center text-[blue]">
-                    M$ 1.6<br>
+                    2<br>
 
-                     <span class="font-medium text-[15px] sm:text-[20px]  text-black text-center">Montant économisé par nos clients</span>
+                     <span class="font-medium text-[15px] sm:text-[20px]  text-black text-center">Partenaires</span>
 
                  </p>
                  <div class="sm:mt-[7px] mt-[40px]">
@@ -300,7 +300,7 @@
                  <p class="sm:text-[50px] text-[55px] font-bold text-primary-first sm:mt-[15px] text-center">
                     8<br>
 
-                     <span class="font-medium text-[15px] sm:text-[20px]  text-black text-center">Employés </span>
+                     <span class="font-medium text-[15px] sm:text-[20px]  text-black text-center">collaborateurs </span>
 
                  </p>
                  <div class="sm:mt-[7px] mt-[40px]">
