--- a/Main/templates/messages.html
+++ b/Main/templates/messages.html
@@ -16,7 +16,7 @@
     <div class="row mt-3">
     {% for message in messages %}
     <div class="col-md-6">
-        <div class="card">
+        <div class="card p-3" >
             <p class="card-text">{{ message.date }}</p>
         <div class="card-body">
             <h5 class="card-title">{{ message.subject }}</h5>
