--- a/Main/templates/projet.html
+++ b/Main/templates/projet.html
@@ -23,15 +23,15 @@
     {% with currentPage='projet' %}
         {% include 'navbar.html' %}
     {% endwith %}
-    <div class="container" style="transform: scale(0.8);">
-        <div class="w-2/4">
-            <div class="text-center mt-8">
-                <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: blue;">Projets</h2>
-                <div class="w-16 h-1 bg-blue-900 mx-auto" style="background-color: blue;"></div>
-            </div>
-        </div>
-        <div class="w-2/4"></div>
+    <div class="ml-5 mt-5 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
+        <p class="text-4xl font-bold " style="color: rgb(75, 75, 255);">
+          Projets
+        </p>
+        <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
+      </div>
+    <div class="container" style="transform: scale(0.9);">
 
+        <div class="w-2/4"></div>
         <!-- Section 1 -->
         {% if projets %}
             {% for proj in projets %}
