--- a/Main/templates/contacter.html
+++ b/Main/templates/contacter.html
@@ -30,8 +30,8 @@
 {% endwith %}
 <body style="background-color: #ffffff;overflow-x: hidden;">
 
-<div  style="height: 100%;">
-<div class="row justify-content-center">
+<div  style="height: 100%;" class="container-fluid">
+<div class="row justify-content-center" class="container-fluid">
     <div class="col-md-12">
     <div class="wrapper">
     <div class="row no-gutters mb-5">
