--- a/Main/templates/footer.html
+++ b/Main/templates/footer.html
@@ -61,9 +61,7 @@
     body {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
-
-
-
+/* Styles pour le popup */
 .content {
   height: 70vh; }
 
