--- a/Main/templates/navbar.html
+++ b/Main/templates/navbar.html
@@ -42,7 +42,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
                 <div class="container">
-                <a class="navbar-brand" href="/"><img style="height: 50px;width: 50px;"  src="/static/assets/images/lms-logo-removebg-preview.png" alt=""/></a>
+                <a class="navbar-brand" href="/"><img style="height: 50px;width: 50px;"  src="https://res.cloudinary.com/dxwn90o2i/image/upload/v1708601931/v2l8kj9mmzlh43acsqht.png" alt=""/></a>
                 <form action="#" class="searchform order-sm-start order-lg-last">
                 <div class="form-group d-flex">
                 <input type="text" class="form-control pl-3" placeholder="Search">
