--- a/Main/templates/projet.html
+++ b/Main/templates/projet.html
@@ -70,7 +70,7 @@
                 </section>
             {% endfor %}
         {% else %}
-            <p style="text-align: center;">Aucun blog n'est disponible pour le moment.</p>
+            <p style="text-align: center;">Aucun projet n'est disponible pour le moment.</p>
         {% endif %}
     </div>
     {% include 'footer.html' %}
