--- a/Main/templates/quisommesnous.html
+++ b/Main/templates/quisommesnous.html
@@ -25,7 +25,7 @@
 Contactez-nous dès aujourd'hui pour découvrir comment nous pouvons vous aider à réaliser vos objectifs dans l'ère de l'industrie 4.0.</p>
                   </div>
                   <div class="col-lg-6">
-                    <img class="img" style="z-index: 9999999;"  src="../static/assets/images/Group 10.png" alt="User 1">
+                    <img class="img" style="z-index: 9999999;"  src="{{url_for('static',filename='assets/pictures/header.jpg')}}" >
                 </div>
             </div>
         </div>
